# urinakysis-analysis

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  mypy.ini  pyproject.toml
notebooks/: analysis.ipynb  urinakysis.ipynb  walmart-sales.ipynb  walmart.ipynb
src/: __main__.py  example.py
